--- a/Torq-backend/package.json
+++ b/Torq-backend/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@perplexity-ai/perplexity_ai": "^0.11.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
 }
