--- a/Torq-backend/package.json
+++ b/Torq-backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@perplexity-ai/perplexity_ai": "^0.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
