--- a/Torq.ai/package.json
+++ b/Torq.ai/package.json
@@ -13,6 +13,9 @@
     "@perplexity-ai/perplexity_ai": "^0.11.0",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
