--- a/Torq.ai/package.json
+++ b/Torq.ai/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@perplexity-ai/perplexity_ai": "^0.11.0",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tsparticles/engine": "^3.9.1",
