--- a/Torq.ai/tsconfig.json
+++ b/Torq.ai/tsconfig.json
@@ -5,10 +5,15 @@
     { "path": "./tsconfig.node.json" }
   ],
     "compilerOptions": {
+        "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "ignoreDeprecations": "6.0",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmitOnError": false
+
   }
 }
